[gd_scene load_steps=3 format=3 uid="uid://b1ylkha8wtmnj"]

[ext_resource type="Theme" uid="uid://c6r0evvw6xarl" path="res://2d/assets/themes/transparent_borders.tres" id="1"]
[ext_resource type="Script" path="res://2d/source/scripts/builder/project/edit.gd" id="2"]

[node name="Node2D" type="Node2D" groups=["builder"]]
script = ExtResource("2")

[node name="Container" type="ScrollContainer" parent="."]
clip_contents = false
offset_top = 80.0
offset_right = 1024.0
offset_bottom = 576.0
mouse_filter = 2
theme = ExtResource("1")

[node name="Grid" type="GridContainer" parent="Container"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
columns = 2

[node name="GameIDLabel" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Game ID."
horizontal_alignment = 2

[node name="GameIDspinbox" type="SpinBox" parent="Container/Grid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
max_value = 0.0
step = 0.0

[node name="GameTitle" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Title of Game."
horizontal_alignment = 2

[node name="Grid3" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="GameTitleLineEdit" type="LineEdit" parent="Container/Grid/Grid3"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label3" type="Label" parent="Container/Grid/Grid3"]
layout_mode = 2
size_flags_horizontal = 0
text = "Refers to the game ID while constrction set is enabled."

[node name="Grid2" type="HBoxContainer" parent="Container/Grid"]
custom_minimum_size = Vector2(222, 0)
layout_mode = 2
alignment = 2

[node name="Label8" type="Label" parent="Container/Grid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0, 0.462745, 1)

[node name="Grid5" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2
alignment = 2

[node name="UpdateMobs" type="Label" parent="Container/Grid/Grid5"]
layout_mode = 2

[node name="Label5" type="Label" parent="Container/Grid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0, 0.462745, 1)
text = "Remember to click this update after enabling an objects at dictionaries menu here at builder."

[node name="UpdateMobs2" type="Label" parent="Container/Grid"]
layout_mode = 2

[node name="Label4" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Dungeons use the Mobs directory and not Mobs1 and Mobs2.  All enabled mobs are searched in Mobs1 and Mobs2. Once found, that mobs is copied to the Mobs directory for faster level loading. If enabled elephant for dungeon 3, level 2, then Mobs directory will
look like, builder_data/objects/data/1/mobs/3/2/elephant/."

[node name="UpdateMobs" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "  Update Mobs."
horizontal_alignment = 2

[node name="UpdateMobsButton" type="Button" parent="Container/Grid"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Update"

[node name="Grid9" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2
alignment = 2

[node name="Label9" type="Label" parent="Container/Grid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0, 0.462745, 1)

[node name="Grid6" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2
alignment = 2

[node name="UpdateMobs" type="Label" parent="Container/Grid/Grid6"]
layout_mode = 2

[node name="Label6" type="Label" parent="Container/Grid"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0, 0.462745, 1)
text = "Remember to click this update after editing is_artifact at dictionaries menu here at builder."

[node name="UpdateArtifacts" type="Label" parent="Container/Grid"]
layout_mode = 2

[node name="Label7" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "All json dictionary files will be scanned and searched for the is_artifact feature. If that is_artifact feature is enabled then that json file will be copyed to the artifacts directory. Only 50 artifacts will be processed."

[node name="UpdateArtifacts2" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "  Update Artifacts."
horizontal_alignment = 2

[node name="UpdateArtifactsButton" type="Button" parent="Container/Grid"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Update"

[node name="ConfirmUpdateMobsDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(500, 119)
theme = ExtResource("1")
dialog_text = "Update mobs directory? If you have lots of builder data directories, the time to complete this feature could take awhile."
dialog_autowrap = true

[node name="ConfirmUpdateArtifactsDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(500, 100)
theme = ExtResource("1")
dialog_text = "Update artifacts data?"
dialog_autowrap = true

[connection signal="tree_exiting" from="." to="." method="_on_MenuDungeons_tree_exiting"]
[connection signal="focus_exited" from="Container/Grid/GameTitle" to="." method="_on_GameTitle_focus_exited"]
[connection signal="mouse_exited" from="Container/Grid/GameTitle" to="." method="_on_GameTitle_mouse_exited"]
[connection signal="text_changed" from="Container/Grid/Grid3/GameTitleLineEdit" to="." method="_on_GameTitleLineEdit_text_changed"]
[connection signal="focus_exited" from="Container/Grid/Grid5/UpdateMobs" to="." method="_on_GameTitle_focus_exited"]
[connection signal="mouse_exited" from="Container/Grid/Grid5/UpdateMobs" to="." method="_on_GameTitle_mouse_exited"]
[connection signal="focus_exited" from="Container/Grid/UpdateMobs2" to="." method="_on_GameTitle_focus_exited"]
[connection signal="mouse_exited" from="Container/Grid/UpdateMobs2" to="." method="_on_GameTitle_mouse_exited"]
[connection signal="focus_exited" from="Container/Grid/UpdateMobs" to="." method="_on_GameTitle_focus_exited"]
[connection signal="mouse_exited" from="Container/Grid/UpdateMobs" to="." method="_on_GameTitle_mouse_exited"]
[connection signal="pressed" from="Container/Grid/UpdateMobsButton" to="." method="_on_UpdateMobsButton_pressed"]
[connection signal="focus_exited" from="Container/Grid/Grid6/UpdateMobs" to="." method="_on_GameTitle_focus_exited"]
[connection signal="mouse_exited" from="Container/Grid/Grid6/UpdateMobs" to="." method="_on_GameTitle_mouse_exited"]
[connection signal="focus_exited" from="Container/Grid/UpdateArtifacts" to="." method="_on_GameTitle_focus_exited"]
[connection signal="mouse_exited" from="Container/Grid/UpdateArtifacts" to="." method="_on_GameTitle_mouse_exited"]
[connection signal="focus_exited" from="Container/Grid/UpdateArtifacts2" to="." method="_on_GameTitle_focus_exited"]
[connection signal="mouse_exited" from="Container/Grid/UpdateArtifacts2" to="." method="_on_GameTitle_mouse_exited"]
[connection signal="pressed" from="Container/Grid/UpdateArtifactsButton" to="." method="_on_UpdateArtifactsButton_pressed"]
[connection signal="confirmed" from="ConfirmUpdateMobsDialog" to="." method="_on_mobs_AcceptDialog_confirmed"]
[connection signal="confirmed" from="ConfirmUpdateArtifactsDialog" to="." method="_on_artifacts_AcceptDialog_confirmed"]
